--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <!-- Specifies the name of the website or the brand associated with the content. This helps identify the source of the content in social media posts. -->
         <meta property="og:site_name" content="I coded a game with Zuitt!" />
         <!-- Defines the URL of an image that will be shown alongside the title and description when your webpage is shared. (thumbnail) -->
-        <meta property="og:image" content="[your-deployment-link]/images/story-thumbnail-2048.jpg" />
+        <meta property="og:image" content="https://24koykoy.github.io/dict_js-fcb//images/story-thumbnail-2048.jpg" />
         <!-- This ensures the image is accessible over a secure connection, which is important for platforms that require HTTPS. -->
-        <meta property="og:image:secure_url" content="[your-deployment-link]" />
+        <meta property="og:image:secure_url" content="https://24koykoy.github.io/dict_js-fcb/" />
 
 
 		<!-- title tag - sets the title of our tab. -->
@@ -47,7 +47,7 @@
 				<div class="share-button-container">
 					<div class="share-label">Share</div>
 					<div class="share-icons">
-						<a href="https://www.facebook.com/sharer/sharer.php?u=[deployment-link]" target="_blank">
+						<a href="https://www.facebook.com/sharer/sharer.php?u=https://24koykoy.github.io/dict_js-fcb/" target="_blank">
 							<img src="./images/share_2048-fb.svg" id = "fb-icon"alt="">
 						</a>
 					</div>
@@ -107,4 +107,5 @@
 		<script src="https://kit.fontawesome.com/6c08c7fbd7.js" crossorigin="anonymous"></script>
 		<script src = "./logic.js"></script>
 	</body>
+
 </html>
