--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<body>
 		<div class="container">
 			<h1>2048</h1>
-			<h2>Created By: Sir Chris</h2>
+			<h2>Created By: Kent</h2>
 			<hr>
 			<div class="header-container">
 				<div class="score-container">
@@ -109,3 +109,4 @@
 	</body>
 
 </html>
+
